welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:4: error: ';' expected but ')' found.
	else {if (a+b==b+c+10 || a+b==a+c+10) x=true)}
                                                    ^